--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,5 +25,9 @@
     "typescript": "~5.9.3",
     "vite": "^7.2.4"
   },
-  "packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd"
+  "packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd",
+  "dependencies": {
+    "@roxi/routify": "3.0.0-next.293",
+    "mode-watcher": "^1.1.0"
+  }
 }
