--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
+    "svelte-dnd-action": "^0.9.67",
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.1.1",
     "tailwindcss": "^4.1.14",
