--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json",
-    "postinstall": "sv-router --path src/routes"
+    "postinstall": "sv-router --path src/routes",
+    "format": "prettier --write .",
+    "lint": "prettier --check ."
   },
   "devDependencies": {
     "@internationalized/date": "^3.10.0",
@@ -19,6 +21,9 @@
     "@types/node": "^24.10.1",
     "bits-ui": "^2.14.4",
     "clsx": "^2.1.1",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
     "svelte-dnd-action": "^0.9.67",
