--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
     "svelte-dnd-action": "^0.9.67",
+    "svelte-sonner": "^1.0.6",
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.1.1",
     "tailwindcss": "^4.1.14",
@@ -36,7 +37,9 @@
   },
   "packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd",
   "dependencies": {
+    "@tanstack/svelte-query": "^6.0.9",
     "mode-watcher": "^1.1.0",
-    "sv-router": "^0.11.0"
+    "sv-router": "^0.11.0",
+    "zod": "^4.1.13"
   }
 }
