--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
     "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json",
     "postinstall": "sv-router --path src/routes",
     "format": "prettier --write .",
-    "lint": "prettier --check ."
+    "lint": "eslint . --ext .js,.ts,.svelte && prettier --check ."
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@internationalized/date": "^3.10.0",
     "@lucide/svelte": "^0.544.0",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
@@ -21,6 +22,9 @@
     "@types/node": "^24.10.1",
     "bits-ui": "^2.14.4",
     "clsx": "^2.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-svelte": "^3.13.0",
+    "globals": "^16.5.0",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.7.1",
@@ -33,6 +37,7 @@
     "tailwindcss": "^4.1.14",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
+    "typescript-eslint": "^8.48.0",
     "vite": "^7.2.4"
   },
   "packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd",
